Link MainActivity and CityActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="PenghuCounty">澎湖縣</string>
     <string name="KinmenCounty">金門縣</string>
     <string name="LienchiangCounty">連江縣</string>
+    <string name="intercity">公路客運</string>
 
 </resources>
